AM_CFLAGS = -Wall -g -I../inc
AM_LDFLAGS = -lgnutls -lini_config -livykis -lnettle

bin_PROGRAMS = dvpn
dvpn_SOURCES = adj_rib_in.c dvpn.c lsa_diff.c rtmon.c conf.c gencert.c lsa_path.c show-key-id.c confdiff.c hostmon.c lsa_print.c spf.c cspf.c itf.c lsa_serialise.c tconn.c dbmon.c iv_getaddrinfo.c main.c tconn_connect.c dgp_connect.c loc_rib.c mkgraph.c tconn_listen.c dgp_listen.c loc_rib_print.c rib_listener_debug.c tun.c dgp_reader.c lsa.c rib_listener_to_loc.c util.c dgp_writer.c lsa_deserialise.c rt_builder.c x509.c

